<resources>
    <string name="tab_settings">Settings</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_medicine">Medicine</string>
    <string name="add_medicine">Add medicine</string>
    <string name="add_reminder">Add reminder</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="dosage">Dosage</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_delete_medicine">Are you sure to delete the medicine?</string>
    <string name="no_reminders">No reminders set</string>
    <string name="version">Version %s</string>
    <string name="are_you_sure_delete_reminder">Are you sure to delete the reminder?</string>
    <string name="clear_events">Clear all history</string>
    <string name="app_version">App version</string>
    <string name="are_you_sure_delete_events">This will permanently delete your entire medication history. This action cannot be undone.</string>
    <string name="show_notifications">Show notifications</string>
    <string name="twenty_four_hours">24 hours</string>
    <string name="two_days">2 days</string>
    <string name="three_days">3 days</string>
    <string name="color">Color</string>
    <string name="select_color">Select color</string>
    <string name="exact_reminders">Exact reminders</string>
    <string name="change_color_toast">Note that changes in color only take effect in future events</string>
    <string name="exact_reminders_summary">Reminders are scheduled at the exact time (increases battery usage)</string>
    <string name="enable_alarm_dialog">In order to allow scheduling exact alarms, enable this for MedTimer in the following menu</string>
    <string name="location_snooze">Location-based snooze</string>
    <string name="location_snooze_summary">Re-notify when arriving home after snoozing</string>
    <string name="location_snooze_no_play_services">Location-based snooze requires Google Play Services, which are not available on this device</string>
    <string name="location_snooze_background_permission">To re-notify when arriving home, allow MedTimer to access location in the background</string>
    <string name="generate_test_data">Generate test data</string>
    <string name="generate_test_data_and_events" translatable="false">Generate test data and events</string>
    <string name="create_reminder_dosage_hint">Dosage for new reminder</string>
    <string name="cycle_consecutive_days">Active days</string>
    <string name="theme">Theme</string>
    <string name="alternative">Alternative</string>
    <string name="before_meal">before the meal</string>
    <string name="after_meal">after the meal</string>
    <string name="time_before_meal">x minutes before the meal</string>
    <string name="time_after">x hours after medicine y</string>
    <string name="medicine_data">Medicine data</string>
    <string name="export_csv">Export as CSV</string>
    <string name="export_pdf">Export as PDF</string>
    <string name="restore">Restore</string>
    <string name="restore_failed">Restore failed</string>
    <string name="backup_failed">Backup failed</string>
    <string name="export_failed">Export failed</string>
    <string name="restore_successful">Restore successful</string>
    <string name="restore_start">This will replace all medicine settings and/or reminder events.\n\nContinue?</string>
    <string name="log_additional_dose">Log additional dose</string>
    <string name="dismiss_notification_action">Action when dismissing notification</string>
    <string name="skip_reminder">Skip dose</string>
    <string name="snooze_duration">Snooze duration</string>
    <string name="minutes_5">5 minutes</string>
    <string name="minutes_10">10 minutes</string>
    <string name="minutes_15">15 minutes</string>
    <string name="minutes_30">30 minutes</string>
    <string name="minutes_60">60 minutes</string>
    <string name="weekend_mode">Weekend mode</string>
    <string name="weekend_mode_days">Days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="weekend_mode_summary">Delay notifications on certain days of the week within a given time range</string>
    <string name="weekend_start_time">Start time</string>
    <string name="weekend_end_time">End time</string>
    <string name="custom">Custom…</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="cycle_pause_days">Pause days</string>
    <string name="reminders">Reminders</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="seven_days">7 days</string>
    <string name="analysis">Analysis</string>
    <string name="tabular_view">Tabular view</string>
    <string name="fourteen_days">14 days</string>
    <string name="thirty_days">30 days</string>
    <string name="total">Total</string>
    <plurals name="last_n_days">
        <item quantity="one">Last 24 hours</item>
        <item quantity="other">Last %1$d days</item>
    </plurals>
    <string name="name">Name</string>
    <string name="event_data">Event data</string>
    <string name="backup">Backup</string>
    <string name="edit_event">Edit event</string>
    <string name="intro_welcome">Welcome to MedTimer!</string>
    <string name="intro_welcome_description">MedTimer is a free and open source medication reminder app with a focus on privacy.\n\nIt requires permission to show notifications for medication reminders.</string>
    <string name="intro_medicine_description">Use the \"Medicine\" tab to create the medicine you are taking and want to be reminded. You can assign tags to medicines and configure their stocks.</string>
    <string name="intro_reminder_description">Select a medicine to edit its details and create reminders for the different doses of the medicine you need to take.\n\nReminders can be time or interval based and can be constrained to specific days.</string>
    <string name="intro_notification_description">Once a reminder is due, a notification will appear that provides you the option to mark a dose as taken (by clicking the \"TAKEN\" button), skipped (by dismissing the notification) or be reminded again after some time (\"SNOOZE\").</string>
    <string name="intro_overview_description">On the overview screen, you can see upcoming reminders and the last reminder events. Reminder events can be edited by swiping right and deleted by swiping left.\n\nFurthermore, you can manually log additional doses of either one of the configured medicine or a custom one.</string>
    <string name="intro_analysis_description">The app stores all reminder events. You can analyze your past doses in the analysis screen and export your history via the kebab (three dots) menu. The history will stay even if medicines or reminders are deleted or renamed.</string>
    <string name="show_intro">Show app intro</string>
    <string name="are_you_sure_delete_reminder_event">Are you sure to delete the reminder event?</string>
    <string name="notification_importance">Notification priority</string>
    <string name="notification_settings_default">Notification settings default priority</string>
    <string name="notification_settings_high">Notification settings high priority</string>
    <string name="calendar">Calendar</string>
    <string name="date">Date</string>
    <string name="active">Active</string>
    <string name="period_start">Period start</string>
    <string name="period_end">Period end</string>
    <string name="activate_all">Activate all reminders</string>
    <string name="deactivate_all">Deactivate all reminders</string>
    <string name="block_screen_capture">Block screen capture</string>
    <string name="icon">Icon</string>
    <string name="every_day_of_month">Every day of the month</string>
    <string name="on_day_of_month">On the %s of the month</string>
    <string name="never">Never</string>
    <string name="medicines_tab_description">Medicines tab</string>
    <string name="overview_tab_description">Overview tab</string>
    <string name="statistics_tab_description">Statistics tab</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="repeat_reminders">Repeat reminders</string>
    <string name="minutes_1">1 minute</string>
    <string name="number_of_repetitions">Number of repetitions</string>
    <string name="time_between_repetitions">Time between repetitions</string>
    <string name="repeat_reminders_summary">Automatically repeats a reminder until it is marked taken or skipped</string>
    <string name="add_linked_reminder">Add reminder for following dose</string>
    <string name="linked_reminder_delay">Delay for following dose</string>
    <string name="delay">Delay</string>
    <string name="delete_re_raise_event">Do you want to delete this event and re-raise the notification?</string>
    <string name="interval_based_reminder">Interval based reminder</string>
    <string name="minutes_string">Minutes</string>
    <string name="hours_string">Hours</string>
    <string name="days_string">Days</string>
    <string name="weeks_string">Weeks</string>
    <string name="create_reminder">Create reminder</string>
    <string name="interval">Interval</string>
    <string name="interval_start_time">Interval start time</string>
    <string name="interval_start_reminded">Interval starts when reminded</string>
    <string name="interval_start_processed">Interval starts when taken or skipped</string>
    <string name="invalid_input">Invalid input</string>
    <string name="medicine_stock">Medicine stock</string>
    <string name="amount">Amount</string>
    <string name="reminder_threshold">Reminder threshold</string>
    <string name="refill_size">Refill size</string>
    <string name="refill_now">Refill now</string>
    <string name="variable_amount">Enter dosage when taken</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tag</string>
    <string name="are_you_sure_delete_tag">Are you sure to delete the tag?</string>
    <string name="more_tags" translatable="false">+%d</string>
    <string name="unit">Unit</string>
    <string name="unlimited">Unlimited</string>
    <string name="override_dnd">Always play notification sound</string>
    <string name="override_dnd_summary">Plays notifications sound if only vibrate is on or do not disturb without vibrate or mute</string>
    <string name="enable_dnd_dialog">In order to allow always playing notification sounds, enable Do not disturb access for MedTimer in the following menu</string>
    <string name="app_authentication">Require authentication to open the app</string>
    <string name="login">Login to MedTimer using biometric authentication</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="hide_med_name">Hide medication name in notification</string>
    <string name="disable_widget">Disable home screen widgets</string>
    <string name="disable_widget_summary">Prevent widgets from displaying sensitive medication information on the home screen</string>
    <string name="re_raise_event">Re-raise event</string>
    <string name="no_alarm_sound_when_silent">No alarm sound when silent</string>
    <string name="no_vibration_when_silent">No vibration when silent</string>
    <string name="alarm_ringtone">Alarm ringtone</string>
    <string name="reschedule_reminder">Reschedule reminder</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="select_all">Select all</string>
</resources>