<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="no_alarm_sound_when_silent"
        android:title="@string/no_alarm_sound_when_silent" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="no_vibration_when_silent"
        android:title="@string/no_vibration_when_silent" />
    <com.futsch1.medtimer.feature.ui.preferences.RingtonePreference
        android:defaultValue="content://settings/system/alarm_alert"
        android:key="alarm_ringtone"
        android:ringtoneType="alarm"
        android:showDefault="true"
        android:title="@string/alarm_ringtone" />

</androidx.preference.PreferenceScreen>
