<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".statistics.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/analysisView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            ap:checkedChip="@id/chartChip"
            ap:selectionRequired="true"
            ap:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chartChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/analysis"
                ap:chipEndPadding="0dp"
                ap:chipIcon="@drawable/bar_chart"
                ap:chipStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tableChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/tabular_view"
                ap:chipEndPadding="0dp"
                ap:chipIcon="@drawable/table"
                ap:chipStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/calendarChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/calendar"
                ap:chipEndPadding="0dp"
                ap:chipIcon="@drawable/calendar_week"
                ap:chipStartPadding="16dp" />
        </com.google.android.material.chip.ChipGroup>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:entries="@array/analysis_days" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.fragment.app.FragmentContainerView>

</LinearLayout>